2017-10-08  Kirit Saelensminde  <kirit@felspar.com>
 * Add parser support for all JSON atom values.

2017-09-25  Kirit Saelensminde  <kirit@felspar.com>
 Add RETURNING support to PUT request for objects.

2017-09-17  Kirit Saelensminde  <kirit@felspar.com>
 Move some tests so Postgres is not needed for a normal build.

2017-05-03  Kirit Saelensminde  <kirit@felspar.com>
 Add -h and -U options to fostgres-test to control how to access the database.

2017-04-08  Kirit Saelensminde  <kirit@felspar.com>
 * Add a `json_recordset` adapter that allows rows to be dereferenced directly as objects.
 * Move the location of the `column_names` API to `fostgres-core`.

2017-02-18  Kirit Saelensminde  <kirit@felspar.com>
 Added support for file uploads. JSON base 64 encoded only.

2017-01-13  Kirit Saelensminde  <kirit@felspar.com>
 Update for new internal structure of `fostlib::json`.

2017-01-12  Kirit Saelensminde  <kirit@felspar.com>
 Removed the old `parser_lock` which is no longer needed.

2017-01-11  Kirit Saelensminde  <kirit@felspar.com>
 Fix the matcher so it properly decodes the file spec parts from their URL encoding.

2017-01-03  Kirit Saelensminde  <kirit@felspar.com>
 Switch to the new version of Boost Spirit. Drop support for Boost version prior to !.59.

2016-09-29  Kirit Saelensminde  <kirit@felspar.com>
 Add default lookups for the Postgres connection string parameters.

2016-09-18  Kirit Saelensminde  <kirit@felspar.com>
 Set the remote address as `fostgres.remote_addr` on the database connection.

2016-09-14  Kirit Saelensminde  <kirit@felspar.com>
 Set source address on the network connection when possible.

2016-09-11  Kirit Saelensminde  <kirit@felspar.com>
 The test script can now check CSJ results are what is expected.

2016-09-09  Kirit Saelensminde  <kirit@felspar.com>
 Can configure a zone info on the view to control which time zone to use.

2016-09-06  Kirit Saelensminde  <kirit@felspar.com>
 * Logging options can be set for fostgres-test.